<resources>
    <string name="app_name">Walmart</string>
    <string name="welcomeString">Sign in to your account</string>
    <string name="emailAddressString">Email address (required)</string>
    <string name="passwordString">Password (required)</string>
    <string name="forgotPasswordString">Forgot Password?</string>
    <string name="signInButton">Sign In</string>
    <string name="questionAccount">Don\'t have an account?</string>
    <string name="createAccountButton">Create a new account</string>
    <string name="categoriesName">Shop by Categories</string>
    <string name="electronic">Electronics</string>
    <string name="clothing">Clothing</string>
    <string name="beauty">Beauty</string>
    <string name="food">Food</string>
    <string name="createAccountString">Create your account</string>
    <string name="firstName">First name*</string>
    <string name="lastName">Last name*</string>
    <string name="email">Email address*</string>
    <string name="password">Password*</string>
    <string name="createAccButton">Create Account</string>
</resources>
