<?xml version="1.0" encoding="utf-8"?>
<!--<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
    <!--xmlns:tools="http://schemas.android.com/tools"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--tools:context=".Main2Activity">-->

<!--</android.support.constraint.ConstraintLayout>-->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/welcomUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginEnd="30dp"
        android:text="welcome"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/categoriesName"
        android:textSize="12pt" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp">

        <TableRow>
            <ImageView
                android:id="@+id/electronics"
                android:src="@drawable/ledtv"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="130dp"
                android:clickable="true"
                android:onClick="onClick"/>

            <ImageView
                android:id="@+id/clothing"
                android:src="@drawable/jacket"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="130dp"
                android:clickable="true"
                android:onClick="onClick"/>
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="150dp"
                android:text="@string/electronic"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="150dp"
                android:text="@string/clothing"/>
        </TableRow>

        <TableRow android:layout_marginTop="50dp">
            <ImageView
                android:id="@+id/beauty"
                android:src="@drawable/lipstick"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="130dp"
                android:clickable="true"
                android:onClick="onClick"/>

            <ImageView
                android:id="@+id/food"
                android:src="@drawable/foodbag"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="130dp"
                android:clickable="true"
                android:onClick="onClick"/>
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="150dp"
                android:text="@string/beauty"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="150dp"
                android:text="@string/food"/>
        </TableRow>
    </TableLayout>
</LinearLayout>